# final-project

./: cipher.json  meson.build
data/: com.github.arshubham.final-project.desktop  meson.build
flatpak/cipher/: metadata  metadata.locale
flatpak/cipher/files/: manifest.json
flatpak/cipher/files/share/appdata/: com.github.arshubham.cipher.appdata.xml
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Properties.vala  Settings.vala
src/controllers/: AppController.vala
src/views/: AppView.vala  HomeView.vala  PackageView.vala  TView.vala  TestView.vala
