sources = files(

    'configs/Constants.vala',
    'configs/Properties.vala',
    'configs/Settings.vala',

    'controllers/AppController.vala',

    'views/AppView.vala',
    'views/HomeView.vala',
    'views/TestView.vala',
    'views/PackageView.vala',
    'views/TView.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
